# comp576-project

./: README.md  config.json  data.py  evaluator.py  main.py  pyproject.toml  trainer.py
models/: README.md  __init__.py  base_model.py  mirt.py  mlp.py  model_factory.py  residual_mlp.py  template.py
